# bseflow

./: .gitattributes  .gitignore  LICENSE  README.md  bootstrap.py  bseflow.yaml  calculate_rates.py  compactH5.py  file_processing.py  formation_rates.py  output_rates.py  output_results.py  plotting_code.py  pyproject.toml  sankey.py  total_mass_evolved_per_Z.py  write_seed_files.py
bseflow/: __init__.py  calculate_rates.py  cli.py  config.py  default_config.yaml  file_processing.py  formation_channels.py  output_rates.py  render.py  total_mass_evolved_per_Z.py  utils.py
bseflow/data_dicts/: __init__.py  drakeFactors.json  drake_factors.py  formationChannels.json  model_variations.py
bseflow/plotting/: __init__.py  bootstrap.py  plotting_code.py  sankey.py
bseflow/slurm_jobs/: create_run_tasks.ipynb
data_dicts/: drakeFactors.json  model_variations.py
