[project]
name = "bseflow"
version = "0.1.0"
description = "Binary stellar evolution tools for investigating intermediate stages"
authors = [
  {name = "Ana Lam", email = "anakristinalam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "scipy",
  "numba",
  "plotly",
  "h5py",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"bseflow.data_dicts" = ["*.json"]