[project]
name = "bseflow"
version = "0.2.0"
description = "Binary stellar evolution tools for investigating intermediate stages"
authors = [
  {name = "Ana Lam", email = "anakristinalam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "scipy",
  "numba",
  "plotly",
  "h5py",
  "tqdm",
  "pyyaml>=6.0",
  "nbformat>=5.10.4",
]

[project.scripts]
bseflow = "bseflow.cli:init"

[project.optional-dependencies]
dev = [
  "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"bseflow" = ["default_config.yaml"]
"bseflow.data_dicts" = ["*.json"]
