[project]
name = "bseflow"
version = "0.2.1"
description = "Visualize the formation pathways of gravitational-wave sources from binary population synthesis"
authors = [
  {name = "Ana Lam", email = "anakristinalam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["astrophysics", "binary-stars", "gravitational-waves", "COMPAS", "population-synthesis", "sankey", "binary-stellar-evolution"]
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "scipy",
  "numba",
  "plotly",
  "h5py",
  "tqdm",
  "pyyaml>=6.0",
  "nbformat>=5.10.4",
]

[project.urls]
Homepage = "https://github.com/ana-lam/bseflow"
Repository = "https://github.com/ana-lam/bseflow"

[project.scripts]
bseflow = "bseflow.cli:init"

[project.optional-dependencies]
dev = [
  "pytest"
]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bseflow*"] 

[tool.setuptools.package-data]
"bseflow" = ["default_config.yaml"]
"bseflow.data_dicts" = ["*.json"]
